--- a/src/Component/createProject/createProject.css
+++ b/src/Component/createProject/createProject.css
@@ -1,40 +1,22 @@
-.form-container {
-    background-color: #f4f4f4;
-    border-radius: 10px;
-    padding: 20px;
-    margin: 20px auto;
-    width: 50%;
-    max-width: 500px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .form-container label {
-    display: block;
-    margin-bottom: 10px;
-    font-size: 18px;
-    font-weight: bold;
-  }
-  
-  .form-container input[type="text"] {
-    padding: 10px;
-    font-size: 16px;
-    border-radius: 5px;
-    border: none;
-    width: 100%;
-    margin-bottom: 20px;
-  }
-  
-  .form-container button[type="submit"] {
-    background-color: #4caf50;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    font-size: 18px;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .form-container button[type="submit"]:hover {
-    background-color: #3e8e41;
-  }
-  
+.card-container {
+  width: 350px;
+  margin: 50px auto;
+ 
+  background-size: cover;
+  background-position: center;
+}
+
+.card-container .MuiCardContent-root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.MuiFormControl-root {
+  margin: 10px 0;
+}
+
+.MuiButton-containedPrimary {
+  margin-top: 20px;
+  width: 100%;
+}
